--- a/07_Study_Guide_2024/Study_Guide_2024.Rmd
+++ b/07_Study_Guide_2024/Study_Guide_2024.Rmd
@@ -57,222 +57,392 @@ New Groups:
 
 7. Add questions that addresses the flow chart above -- ask the reader to consider what type of analysis it might be and why!
 
-
-
 8. Cut the sections of the Rmd that you are not working on and when you are done (don't cut the preamble stuff). 
 
 9. please submit a working Rmd file on today's canvas assignment and change the folks in your group in the "author" in the Rmd file.
 
+## Round Three: 
+
+### Marc's Synthesis
+
+1. I combined each submission, tricky since some didn't cut out the sections they didn't work on, so I had to compare line-by-line. Must be a better way!
+
+2. I formatted each section so I could a "stand alone" lesson that I will make into a video during the week of the 21st of April.
+
+### Videos
+3. Created a dozen or so videos so that students have a idea of what to do for their pilot project analyses.
+
+### Peer Evaluation
+
+4. Each group will watch a movie and make suggestions to improve content and explanation
+
+Group 1: Section 1, 
+Group 2: Section 2
+Group 3: Section 3
+Group 4: Section 4
+Group 5: Section 5
+Group 6: Section 6
+Group 7: Section 7
+Group 8: Section 8
+
 # Working with R
 
-## 1. Creating Vectors
+## 1. Vectors
 
-Each group will write two questions (and answers). Then at the top of each section, write out a short study guide that might include useful functions to understand, a link to a video, or “psuedo” code that might help.
+### Q1a. What are vectors and how are they used?
 
-### Question 1a: How can you create a character vector with the names of three fruits?
+Answer: They are very versatile and can store multiple variables in a single date type.
+
+### Q1b: Create a vector of character values
 
 Step-by-step guide: 
 \begin{itemize}
 	\item Determine the strings you want to include in your vector.
 	\item Use the \texttt{c()} function to combine these strings.
 	\item Assign the result to a variable.
+	\item Print the variable to see the result.
 \end{itemize}
 
-
-Utilize the c() function to combine character strings into a vector: 
-
-fruits_vector <- c("apple", "banana", "cherry")
+Utilize the c() function to combine character strings into a vector. For example, in this case, we enumerated the number of ant genera in several Claremont parks. 
 
 ```{r}
-fruits_vector <- c("apple", "banana", "cherry")
+ant_species <- c("Formica", "Camponotus", "Lasius", "Myrmica", "Tetramorium")
+set.seed(29330)
+ant_vector <- sample(ant_species, 19, replace = TRUE)
 ```
 
-Answer: 
+Let's see what it looks like: 
 
 ```{r}
-print(fruits_vector)
+print(ant_vector)
 ```
 
+### Q1c: Create a vector of tree heights
 
-### Question 1b: Why are vectors commonly used in graphing data?
+Tree height can be used to estimate the shading of a park. You have surveyed the tree heights in several open areas in the 5C and will use these to estimate the amount of shade on campus.   
 
-Answer: They are very versatile and can store multiple variables in a single date type.
+You've surveyed all the trees in your local park and recorded their height, in feet, as follows:  50, 25, 36, 27, 82, 39, 55, 62
+
+```{r}
+tree_height <- c(50,25,36,27,82,39,55,62,33)
+print(tree_height)
+```
+
+In addition, we collected tree height data from a 2nd city park: 
+
+```{r}
+tree2_height <- c(60,27,70,29,80,39,40,60)
+```
+
+### Q1d. Vector of Rainfall Data
+
+We going to create a vector of random numbers that represent 25 years of rainfall data using a lognormal distribution with the following parameter: mean = 25, sd = 10.
+
+```{r}
+set.seed(11144)
+rainfall_notrend <- rlnorm(n =25, meanlog = 1.5, sdlog =1); #hist(rainfall)
+```
+
+To make the data more interesting, we'll add a trend to the data, where amount goes up by 1% of the mean each year. Note: I should have this amoratized using a loop, but didn't have time to write the code.
+
+```{r}
+rainfall_trend <- rainfall_notrend * (1 + seq(0, 0.24, 0.01))
+rainfall_trend
+```
+
+(1 + seq(0, 0.24, 0.01))
+print(rainfall)
 
 
-
-## 2. Creating Dataframe in R
+## 2. Dataframes in R
 
 Introductory video: [R Tutorial - Using the Data Frame in R](https://www.youtube.com/watch?v=9f2g7RN5N0I)
 
 A data frame is a collection of data in rows and columns
 \begin{itemize}
-	\item Rows = entries
-	\item Columns = variables
+	\item Rows = entries (observations)
+	\item Columns = variables (composted of vectors)
 \end{itemize}
 
-It can only store vectors of the same length
+A dataframe can only store vectors of the same length, you you might get an error, see below.
 
-Create a data frame with two vectors (vector_1 and vector_2)
+
+### Q2a: Creating a Dataframe with Three Treatments: 
+
+Data are use to evaluate compuse maturity from there treatments "A", "B", and "C": We'll select 10 measures from a random normal distribution with various means and a standard deviation of 2 and round to the nearest 0.1. 
 
 ```{r}
-# df <- data.frame(vector_1, vector_2) PRODUCES AN ERROR...NOT SURE OF THE GOAL
+group1 <- round(rnorm(10, mean = 10, sd = 2), 1)
+group2 <- round(rnorm(10, mean = 12, sd = 2), 1)
+group3 <- round(rnorm(10, mean = 15, sd = 2), 1)
 ```
 
-### Question 2a: 
-
-How do you create a complete data frame with the following information? Draw an example table for all viable scenarios
-
-Scenario 1:
+To create the dataframe, we'll need to add the treatments so they are repeated 10 times for each treatment. 
 
 
-\begin{enumerate}
-	\item Variables (Classes or Categories): Fruit, Vegetable
-	\item Entries: Apple, Banana, Celery, Kale
-\end{enumerate}
+```{r}
+compost_data <- data.frame(
+  Group = rep(c("A", "B", "C"), each = 10),
+  Dependent_Variable = c(group1, group2, group3)
+)
+```
+
+Show the first few rows of the dataset
+
+```{r}
+head(compost_data)
+```
+
+We'll look at the summary of the data in Section [Q4b: Using the Summary() function on Compost Maturity Data] and use an ANOVA in Section [Q5a: ANOVA of Compost Maturity Data]
+
+### Q2b. Data Frame with Rainfall
+
+We created 25 years of data using a lognormal distribution and then create a trend in the vector. Now we will create a dataframe with the following columns: Year, Rainfall_Notrend, and Rainfall_Trend.
+
+```{r}
+year <- 1995:2019
+rainfall.df <- data.frame(year, rainfall_notrend, rainfall_trend)
+```
+
+Now let's check the dataframe:
+
+```{r}
+str(rainfall.df)
+head(rainfall.df)
+
+```
+We will analyze this using a [7a Linear Regression of Rainall Data]
+
+### Q2c. Data Frame with Squirrel Reproduction
+
+We have collected data on the weight of ground squirrels and the number of offspring they have. We will create a dataframe with the following columns: Ground_Squirel_ID, Weight, and Off_spring.
+
+```{r}
+Ground_Squirrel_ID <- 1:20
+Weight <-     c(250, 340, 550, 190, 509, 609, 745, 846, 963, 433, 444, 833, 355, 455, 300,555, 666, 777, 888, 599)
+Off_spring <- c(0,     0,   1,   0,   0,   0,   1,   0,   1,   1,   0,   1,   0,   0,   0,  0,  1,    1,  1,    1)
+
+Ground_Squirrel_data <- data.frame(Ground_Squirrel_ID, Weight, Off_spring)
+```
 
 
-Scenario 2:
+
+## 3. Matrices
+
+Matrices are used to store data in a two- or mult-dimensional format. They are similar to data frames, but all elements must be of the same data type. Once you have created a matrix, you can perform mathematical operations on it, such as addition, subtraction, and multiplication -- following the rules of matrix algebra.
+
+For our purposes, we'll make a matrix of the following data:
+
+\begin{table}
+	\centering
+		\begin{tabular}{cccc}
+	&	Bees & Butterflies & Beetles \\
+Vegetable Garden &			1 & 2 & 2 \\
+Flower Garden &			15 & 6 & 22\\
+Herb Garden	&		7 & 11 & 15 \\
+		\end{tabular}
+\end{table}	
+
+
+Step-by-step guide: 
 \begin{itemize}
-	\item Variables: Birds, Dogs, Cats
-	\item Entries: Parrot, Eagle, Husky, Rag Doll, Siamese
-
+	\item 
 \end{itemize}
 
-Answer:
+		
+### Q3a: Create a Matrix of Pollinator Data
 
 ```{r}
-Fruit = c("Apple", "Banana")
-Vegetable = c("Celery", "Kale")
+pollinators_type <- c("Bees", "Butterflies", "Beetles")
+garden_type <- c("Vegetable garden", "Flower garden", "Herb garden")
 
-Scenario1 = data.frame(Fruit, Vegetable)
+pollinator_data = c(1, 2, 2, 15, 6, 22, 9, 11, 15)
+# Generate fake data
+pollination_matrix = matrix(pollinator_data, nrow = 3, ncol = , byrow=TRUE)
+
+pollination_matrix
+```
+
+Sometimes it nice to name the rows and columns to make sure you can keep track of the data.
+
+```{r}
+colnames(pollination_matrix) <- garden_type
+rownames(pollination_matrix) <- pollinators_type
 ```
 
 
 ```{r}
-Birds= c("Parrot", "Eagle")
-Dogs = c("Husky", "Rag Doll")
-Cats = c("Siamese")
-
-Scenario2 = data.frame(Birds, Dogs, Cats)
+pollination_matrix
 ```
 
+We will use a [Q6a: Fisher Test of Pollinator Data] to analyze this data.
 
-We cannot create a dataframe for scenario 2 because the Dog vector has one less entry than the other two vectors.
+## 4. Summary Statistics
 
-MLH NOTE: I didn't get an error, not sure what the goal is here.
-
-## 3. Summary Statistics
-
-So, what are summary statistics? Check out this 5-minute video: 
+When you want to evaluate a dataset and learn more information about the distribution! It is a helpful first step before undertaking more complex tests on the data . So, what are summary statistics? Check out this 5-minute video: 
 
 Basic summary statistics in R. Pay close attention to the code used to find the mean, median, and standard deviation. 
 
-### Question 3a: 
+Role of Summary Statitiscs in Data Analysis
 
-Create a dataframe based on the following table:
-\begin{table}
-	\centering
-		\begin{tabular}{cllc}
-Ranking		& 	Animal 	& Country 		& Avg. Sleep Hours \\
-1					& 	Koala		& Australia		& 21 \\
-2					& Hedgehog  & Italy       & 18 \\
-3					& Sloth			& Peru        & 17 \\
-4					& Panda 		& China       & 10 \\
-		\end{tabular}
-\end{table}
+### Q4a: Summary of Categorical Data
 
-Answer: 
-
-MLH NOTE: produces an error...not sure what the goal of the line Summary Statistics.
-
+The table() function is used to summarize categorical data. It will provide a frequency count of the data.
 ```{r}
-ranking <- 1:4
-animal <- c('koala', 'hedgehog', 'sloth', 'panda')
-country <- c('Australia', 'Italy', 'Peru', 'China')
-avg_sleep_hours <- c(21, 18, 17, 10)
-super_sleepers <- data.frame(ranking, animal, country, avg_sleep_hours)
-print(super_sleepers)
-# Summary Statistics -- COMMENTED OUT PRODUCED ERROR
+table(ant_data)
 ```
 
+### Q4b: Using the Summary() function on Compost Maturity Data
 
-### Question 3b: When might it be helpful to use summary statistics? 
-
-
-Answer: When you want to evaluate a dataset and learn more information about the distribution! It is a helpful first step before undertaking more complex tests on the data 
-
-
-### Question 3b: 
-
-In your RStudio, load the dataset cars. This is built into the software! 
-
-Now, please provide some of the summary statistics for this dataset. This includes the mean and median for speed and distance. It might be helpful to View the dataset before starting to orient yourself within the data. 
-
-No code given...
+Provide some of the summary statistics for this dataset. T
 
 ```{r}
-# No code given
+summary(compost_data)
 ```
 
-View: this is what the first 15 columns should look like
- 
+The summary works well for the dependent variable, but not for the treatment group. We can use the table() function to summarize the treatment group. 
 
-Mean Values: speed = 15.4, distance = 42.98
+```{r}
+table(compost_data$Group)
+```
+Which tells us that there are 10 observations for each group. Not that interesting. I would rather use str() to get a better idea of the data. 
 
-Median Values: speed = 15.00, 36.00
+```{r}
+str(compost_data)
 
-## t-Test: Comparing Two Populations
+```
 
+To get to the summary stats, I prefer using the mean(), median(), and sd() functions. 
+
+### Q4c. Mean, Median, and Standard Devivation
+
+```{r}
+mean(compost_data$Dependent_Variable)
+median(compost_data$Dependent_Variable)
+sd(compost_data$Dependent_Variable)
+```
+All good, but if you want to look at how these data vary by catogory, then we need to use boxplot() function. See Section [Q8a: Boxplot of Compost Maturity Data]
+
+## 5 Visualing Data, Distributions, and Relationships
+
+
+### Q5a Histogram of Tree Height Vector
+
+```{r}
+hist(tree_height)
+```
+
+### Q5b: Double Variable Histogram 
+
+You want to compare tree heights in different nearby parks
+You record the tree height at another park as: 60,27,70,29,80,39,40,60
+
+Answer:
+```{r}
+
+p1<-hist(tree_height)
+p2<-hist(tree2_height)
+plot( p1, col=rgb(0,0,1,1/4), xlim=c(0,100))  # first histogram
+plot( p2, col=rgb(1,0,0,1/4), xlim=c(0,100), add=TRUE)
+```
+
+### Q5c Probabaility Distributions
+
+Instead of using a histogram, we can also use a theoretical probability distribution to represent the data.
+
+In the example below, we used both the normal probability distribution and the lognormal probability distribution. Which one do think models the data better? I suggest you compare thest to a histogram, data from [1d. Vector of Rainfall Data]
+
+```{r}
+x= 1:25
+x<-seq(from=-5,to=10,length.out=100)
+plot(x,dnorm(x), ty='l', col='red')
+lines(x,dnorm(x), ty='l', col='blue')
+```
+
+### Q5d: Boxplot of Compost Maturity Data
+
+```{r}
+boxplot(compost_data$Dependent_Variable ~ compost_data$Group)
+```
+
+### Q5e: Scatterplot of Rainfall Data
+
+```{r}
+plot(rainfall_notrend ~ year, rainfall.df, col = "blue", ylim=c(0, 50))
+points(rainfall_trend ~ year, rainfall.df, col = "red", pch=20)
+```
+
+### Q5f: Scatterplot of Ground Squirrel Data
+
+```{r}
+plot(Off_spring ~ Weight, data= Ground_Squirrel_data, col="blue", pch=20, las=1)
+
+```
+
+## 6. Tests for Association
+
+Test for association are use to determine if two or more categorical variables are independent.
+If we can reject the hypothesis, then we can conclude that there is an association between the variables.
+
+
+Contingency tables are very useful when we need to condense a large amount of data into a smaller format, to make it easier to gain an overall view of our original data. To create contingency tables in R we will be making use of the table() function.
+
+In statistics, a contingency table (also known as a cross tabulation or crosstab) is a type of table in a matrix format that displays the multivariate frequency distribution of the variables.
+
+-- What kind of variables: Categorical (nominal or ordinal with a few categories)
+-- Common Applications: Association between two categorical variables.
+
+
+The chi-squared test tests the hypothesis that there is no relationship between two categorical variables. It compares the observed frequencies from the data with frequencies which would be expected if there was no relationship between the variables. We use a fisher test when the sample size is small.
+
+
+Use the table(row variable $ column variable) function to parse the data
+https://bookdown.org/kdonovan125/ibis_data_analysis_r4/working-with-tables-in-r.html 
+
+
+
+Simple explanation from R website
+https://bookdown.org/kdonovan125/ibis_data_analysis_r4/working-with-tables-in-r.html 
+
+Determine if there is an assocation between the pollinator type and garden type (See data in Section 2)
+
+### 6a: Fisher Test of Pollinator Data
+
+```{r}
+fisher.test(pollination_matrix)
+```
+
+### 6b: Chi.squared Test of Pollinator Data
+
+```{r}
+chisq.test(df$Pollinator, df$Garden_Type)
+```
+
+## 7 t-Test: Comparing Two Populations
+
+T-tests are a type of inferential statistic used to determine statistical significance between the means of two variables. T-tests are used to test whether or not a hypothesis is statistically significant.
+
+T-tests can be dependent or independent.
+
+Comparing efficacy of different trial medications or treatments
 To calculate a t-test, you need the mean values from each data set, the standard deviation, and how many data values there are.
-
-Pseudo code 
-t.test(x, y,
-      alternative = c("two.sided", "less", "greater"),
-      mu = 0, paired = FALSE, var.equal = FALSE,
-      conf.level = 0.95, ...)
-
 
 https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/t.test 
 
 
-### 4a: What is a t-test? What information do you need to know in order to conduct a T-test?
+### 7a: Perform a two-sample t-test to compare the means of the treatment and control groups.
 
-Answer: T-tests are a type of inferential statistic used to determine statistical significance between the means of two variables. T-tests are used to test whether or not a hypothesis is statistically significant.
-
-T-tests can be dependent or independent.
-
-### 4b: What is a practical use of a t test? 
-
-Comparing efficacy of different trial medications or treatments
-
-
-
-
-### 4c: Perform a two-sample t-test to compare the means of the treatment and control groups.
-
-
-Fake data set:
-```{r, eval=FALSE}
-# Group 1 (Treatment Group):
-25, 28, 30, 32, 26
-# Group 2 (Control Group):
-20, 22, 24, 21, 23
-```
-
-
-
-NOTE: not sure how this would work given the code above, and change to eval=FALSE because of errors.
-
-What type of graph is useful for showing a t-test? 
-
-Boxplot
-Command: boxplot()
+We'll use the data from [Q1c: Create a vector of tree heights].
 
 ```{r}
-# no code given for answer
-```
+t.test(tree_height, tree2_height)
 
-## ANOVA
+```
+The results of the t-test show that the p-value is not less than 0.05, which means that we can reject the null hypothesis that the means of the two groups are equal.
+
+## 8. ANOVA: Comparing Three or More Populations
+
+ANOVA (Analysis of Variance) in R is a statistical technique used to see how a quantitative dependent variable changed compared to categorical independent variables
 
 [Link to Video: Analysis of Variance (ANOVA) in R](https://www.youtube.com/watch?v=qrP7evoNCy4)
 
@@ -289,83 +459,26 @@ It is used to categorize differences in data, or variances, into different group
 A one-way ANOVA is for three or more groups of data
 If there is no variance the ANOVA f-ratio will be 1
 
-### Question 5a: What is ANOVA used for? 
+### Q8a: ANOVA for Compost Data
 
-Answer: ANOVA (Analysis of Variance) in R is a statistical technique used to see how a quantitative dependent variable changed compared to categorical independent variables
-
-What code would you use for ANOVA on this fake dataset?
-
-### Generate fake data
+We can use anova(lm()) or an easier method: aov()
 ```{r}
-group1 <- rnorm(30, mean = 10, sd = 2)
-group2 <- rnorm(30, mean = 12, sd = 2)
-group3 <- rnorm(30, mean = 15, sd = 2)
+compost.anova <- anova(lm(Dependent_Variable ~ Group, data=compost_data))
+compost.aov <- aov(Dependent_Variable ~ Group, data=compost_data)
+
 ```
 
-### Combine data into a dataframe
-```{r}
+```{r}  
+compost.anova
+```
 
-fake_data <- data.frame(
-  Group = rep(c("A", "B", "C"), each = 30),
-  Dependent_Variable = c(group1, group2, group3)
-)
+```{r}
+summary(compost.aov)
 ```
 
 
-### Show the first few rows of the dataset
-```{r}
-head(fake_data)
-```
 
-
-Answer: 
-
-```{r}
-result <- aov(Dependent_Variable ~ Group, data = fake_data)
-summary(result)
-```
-
-
-What is an example of ANOVA code?
-
-```{r}
-# Fake data set
-group1 <- c(35, 38, 42, 40, 36)
-group2 <- c(28, 32, 30, 34, 31)
-group3 <- c(45, 48, 50, 47, 49)
-
-# Combine data into a data frame
-data <- data.frame(Group = rep(c("Group1", "Group2", "Group3"), each = 5),
-                   Value = c(group1, group2, group3))
-
-# Run ANOVA test
-result <- aov(Value ~ Group, data = data)
-
-# Summary of ANOVA
-summary(result)
-```
-
-## Linear Regression
-
-### Question 6a: Make a linear regression figure based on the data below
-
-Fake data set:
-Age: 1, 2, 3, 4, 4, 5, 7, 8, 8, 10, 13
-Height(in): 30, 37, 40, 42, 43, 48, 49, 53, 50, 62
-
-Answer:
-```{r}
-age <- c(1, 2, 3, 4, 4, 5, 7, 8, 8, 10, 13)
-height <- c(30, 37, 40, 42, 43, 48, 49, 51, 53, 50, 62)
-
-kids <- lm(height ~ age)
-summary(kids)
-plot (height ~ age)
-abline (coef(kids))
-```
-
-
-### Q6b: What relationship does a linear regression model describe?
+## 9. Linear Regression
 
 Answer: A linear regression model describes the relationship between a dependent variable, y, and one or more independent variables, X.
 
@@ -373,77 +486,64 @@ Q: What command in R allows you to review the models coefficients and see detail
 
 A:summary(lmheight) 
 
+### Q9a: Linear Regression of Rainfall Data
+
+Since we already found that a linear regression might be a good model to use from the scatterplot (Section [Q5e Scatterplot of Rainfall Data]), we can now run the linear regression.
+
+we run the linear regression, let's loot at both the trend and nontrend:
+
+```{r}
+lm_notrend <- lm(rainfall_notrend ~ year, data = rainfall.df)
+lm_trend <- lm(rainfall_trend ~ year, data = rainfall.df)
+
+summary(lm_notrend)
+summary(lm_trend)
 
 
-## Contingency Table
-
-STUDY GUIDE
-Use the table(row variable $ column variable) function to parse the data
-https://bookdown.org/kdonovan125/ibis_data_analysis_r4/working-with-tables-in-r.html 
-
-
-### Q1: Using the data below, create a contingency table
-
-
-df = 
-
-
-A1: code doesn't work... Not sure what to do here...
-
-```{r, eval=FALSE}
-table(Bees
-Moths
-Total
-Native_garden
-126
-7
-133
-Non-native_garden
-14
-0
-14
-Total
-140
-7
-147
 ```
+The "Estimate" for the year, is the slope of the line and the p-value is the significance of the slope. In both cases, we cannot reject the null hypothesis that the slope is zero, i.e. there is no trend. 
+
+How could we adjust the trend data to make it significant?
 
 
-
-
-## Logistic Regression
-
-
-What is a logistic regression? Watch this 8 min video to find out!
-
-
-
-### Q8a: What is a logistic regression and what are they used for?
+## 10. Logistic Regression
 
 Logistic regression estimates the probability of an event occurring, such as voted or didn’t vote, based on a given data set of independent variables. They are used commonly for prediction and classification problems. They are best used in scenarios where there is a binary outcome (ie. yes or no, black of white, etc.)
 
-### Q8b: What are the characteristics of data sets that can be used to create logistic regression? 
+Logistics regression graphs can be made with data sets that contain continuous variables (Like temperature, or depth) and a binary/ categorical outcome variable (yes/no , 1/0, on /off). Sample sizes are usually larger and assumes a linear relationship between variables and categorical outcomes. 
 
-answer : Logistics regression graphs can be made with data sets that contain continuous variables (Like temperature, or depth) and a binary/ categorical outcome variable (yes/no , 1/0, on /off). Sample sizes are usually larger and assumes a linear relationship between variables and categorical outcomes. 
+What is a logistic regression? Watch this 8 min video to find out!
 
-
-See this UCLA website that describes how to use a logistic regression in R and gives examples.
+### Q10a: Ground-Squirrel Reproduction with Logistic Regression
 
 ```{r}
-# Create Data Set
-Customer_ID <- c(1, 2, 3, 4, 5, 6, 7, 8, 9)
-Age <- c(55, 19, 50, 21, 45, 46, 63, 33, 44)
-Gender <- c("Male", "Male", "Female", "Male", "Male", "Female", "Female", "Male", "Male")
-Item_Purchased <- c("Blouse", "Sweater", "Jeans", "Sandals", "Blouse", "Sneakers", "Shirt", "Shorts", "Coat")
-Category <- c("Clothing", "Clothing", "Clothing", "Footwear", "Clothing", "Footwear", "Clothing", "Clothing", "Outerwear")
-Purchase_Amount_USD <- c(53, 64, 73, 90, 49, 20, 85, 34, 97)
+logit_model <- glm(Off_spring ~ Weight, data = Ground_Squirrel_data, family = "binomial")
+summary(logit_model)
 
-# Combine data into a data frame
-data <- data.frame(Customer_ID, Age, Gender, Item_Purchased, Category, Purchase_Amount_USD)
 ```
-                   
 
-NO CODE GIVEN FOR ANSWER
- 
+### Q10b: Odds Ratio of Ground-Squirrel Reproduction
+
+```{r}  
+exp(coef(logit_model))
+
+```
+
+### Q10c: Predicting Ground-Squirrel Reproduction
+
+```{r}
+
+predict_sqirrel= sort(predict(logit_model, type = "response"))
+
+plot(Ground_Squirrel_data$Weight, Ground_Squirrel_data$Off_spring, col = "blue", pch = 19)
+lines(sort(Ground_Squirrel_data$Weight), predict_sqirrel, col = "red")
+
+```
+
+  
+## 11. K-Means Clustering
+  
+
+
 
 
